[project]
name = "claude-code-proxy"
version = "0.1.5"
description = "Connect Claude Code to alternative models from OpenAI or Gemini."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn==0.34.3",
    "httpx==0.28.1",
    "pydantic==2.11.5",
    "litellm==1.72.2",
    "python-dotenv==1.1.0",
]

[dependency-groups]
dev = ["ruff==0.11.13"]

[build-system]
requires = ["uv_build>=0.7.8,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "server"
module-root = ""

[project.scripts]
claude-code-proxy = "server.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"] # Auto-sort imports
