[project]
name = "claude-code-proxy"
version = "0.1.5"
description = "Connect Claude Code to alternative models from OpenAI or Gemini."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "litellm==1.75.4",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = ["ruff==0.12.8"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "server"
module-root = ""

[project.scripts]
claude-code-proxy = "server.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"] # Auto-sort imports
